# all-contributors

./: Cargo.toml  LICENSE  build.rs  deny.toml  readme.md
.github/workflows/: main.yml  release.yml
.zed/: settings.json
src/: add.rs  config.rs  constants.rs  generate.rs  main.rs  models.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: add.rs
src/models/: contribution_kind.rs  contribution_kind_gen.rs  contribution_table.html  contribution_type.rs  contribution_type_gen.rs  contributor.rs  contributors_config.rs  contributors_config_input.rs  mod.rs  repository_type.rs
tests/cli/: add.rs  e2e.rs  generate.rs  mod.rs
tests/cli/snapshots/: main__cli__add__add_an_existing_contribution_should_do_nothing-2.snap  main__cli__add__fails_to_add_if_no_config_file.snap  main__cli__add__should_add_new_contribution_to_existing_contributor-2.snap  main__cli__add__should_add_new_contribution_to_existing_contributor.snap  main__cli__add__should_add_new_contributor_and_its_contributions_and_then_apply_generate-2.snap  main__cli__add__should_add_new_contributor_and_its_contributions_and_then_apply_generate_alt-3.snap  main__cli__e2e__add_new_contribution_to_existing_contributor_and_generate.snap  main__cli__e2e__add_new_contributor_and_its_contributions_and_generate.snap  main__cli__generate__fails_to_generate_if_no_config_file.snap  main__cli__generate__fails_to_generate_if_one_file_does_not_exist.snap  main__cli__generate__should_generate_with_same_input-2.snap  main__cli__generate__should_generate_with_same_input.snap
tests/helpers/: common.rs  io.rs  mod.rs
