[package]
name = "all-contributors"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
insta = "1.42.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
