[package]
name = "all-contributors"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
insta = "1.42.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
