[package]
name = "all-contributors"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
octocrab = "0.44.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
insta = { version = "1.42.2", features = ["filters"] }

[build-dependencies]
color-eyre = "0.6.3"
convert_case = "0.8.0"
regex = "1.11.1"
table-extract = "0.2.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
